<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/titleFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_margin="2sp"
    android:layout_marginStart="2sp"
    android:background="@android:color/holo_green_dark"
    android:orientation="horizontal"
    tools:context=".TitleFragment">

    <TextView
        android:id="@+id/betAmountText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:text="@string/bet_amount_text"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/playGameButton"
        app:layout_constraintEnd_toEndOf="@+id/posChangeBet2"
        app:layout_constraintStart_toStartOf="@+id/negChangeBet2"
        app:layout_constraintTop_toBottomOf="@+id/posChangeBet" />

    <TextView
        android:id="@+id/accountBalance2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/account_balance"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/negChangeBet2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/neg_bet_string"
        app:layout_constraintBottom_toTopOf="@+id/playGameButton"
        app:layout_constraintEnd_toStartOf="@+id/posChangeBet2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/appTitle"
        app:layout_constraintStart_toStartOf="@+id/playGameButton"
        app:layout_constraintTop_toBottomOf="@+id/changeBetButton2" />

    <Button
        android:id="@+id/posChangeBet2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/post_bet_value"
        app:layout_constraintBottom_toTopOf="@+id/playGameButton"
        app:layout_constraintEnd_toEndOf="@+id/playGameButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/negChangeBet2"
        app:layout_constraintTop_toBottomOf="@+id/changeBetButton2" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="@color/lb_browse_header_color"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playGameButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/lb_default_brand_color_dark"
        android:text="@string/playGameText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

</androidx.constraintlayout.widget.ConstraintLayout>